# Temperature-Sensor

./: Temp_Sensor.code-workspace
APP/: CMakeLists.txt  main.c
HAL/BUZZER/: BUZZER_config.h  BUZZER_interface.h  BUZZER_private.h  BUZZER_program.c
HAL/CLCD/: CLCD_config.h  CLCD_interface.h  CLCD_program.c
HAL/LM35/: LM35_config.h  LM35_interface.h  LM35_private.h  LM35_program.c
LIB/: std_types.h
MCAL/ADC/: ADC_config.h  ADC_interface.h  ADC_private.h  ADC_program.c
MCAL/Timer1/: TIMER1_config.h  TIMER1_interface.h  TIMER1_private.h  TIMER1_program.c
